src/jcodingtime/java/verifier/parser/jct.jj
PARSER_BEGIN(Parser)
class Parser
{
    public static void main(String[] args) throws ParseException
    {
        try
        {
            Parser parser = new Parser(System.in);
            parser.Program();
        }
        catch(ParseException e)
        {
            System.out.println(e.getMessage());
        }
    }
}
PARSER_END(Parser)

/* RESERVED WORDS TO JCODINGTIME */

TOKEN : {
    < JCODINGTIME: "JCodingTime">{System.out.println("Palavra reservada JCodingTime coincide com -> "+image);}
    | < INPUT: "Input">{System.out.println("Palavra reservada Input coincide com -> "+image);}
    | < FPARAM: "firstParam">{System.out.println("Palavra reservada firstParam coincide com -> "+image);}
    | < SPARAM: "secondParam">{System.out.println("Palavra reservada secondParam coincide com -> "+image);}
    | < OUTPUT: "Output">{System.out.println("Palavra reservada Output coincide com -> "+image);}
    | < RPARAM: "result">{System.out.println("Palavra reservada result coincide com -> "+image);}
}

/* SEPARATORS */
TOKEN :
{
  < LPAREN: "(" >{System.out.println("Parêntese esquerdo coincide com -> "+image);}
| < RPAREN: ")" >{System.out.println("Parêntese direito coincide com -> "+image);}
| < LBRACE: "{" >{System.out.println("Chave esquerda coincide com -> "+image);}
| < RBRACE: "}" >{System.out.println("Chave direita coincide com -> "+image);}
| < LBRACKET: "[" >{System.out.println("Colchete esquerdo coincide com -> "+image);}
| < RBRACKET: "]" >{System.out.println("Colchete direito coincide com -> "+image);}
| < SEMICOLON: ";" >{System.out.println("Ponto e vírgula coincide com -> "+image);}
| < COMMA: "," >{System.out.println("Vírgula coincide com -> "+image);}
| < DOT: "." >{System.out.println("Ponto coincide com -> "+image);}
| < AT: "@" >{System.out.println("Símbolo arroba coincide com -> "+image);}
}

/* OPERATORS */

TOKEN :
{
  < ASSIGN: "=" >
| < LT: "<" >
| < BANG: "!" >
| < TILDE: "~" >
| < HOOK: "?" >
| < COLON: ":" >
| < EQ: "==" >
| < LE: "<=" >
| < GE: ">=" >
| < NE: "!=" >
| < SC_OR: "||" >
| < SC_AND: "&&" >
| < INCR: "++" >
| < DECR: "--" >
| < PLUS: "+" >
| < MINUS: "-" >
| < STAR: "*" >
| < SLASH: "/" >
| < BIT_AND: "&" >
| < BIT_OR: "|" >
| < XOR: "^" >
| < REM: "%" >
| < LSHIFT: "<<" >
| < PLUSASSIGN: "+=" >
| < MINUSASSIGN: "-=" >
| < STARASSIGN: "*=" >
| < SLASHASSIGN: "/=" >
| < ANDASSIGN: "&=" >
| < ORASSIGN: "|=" >
| < XORASSIGN: "^=" >
| < REMASSIGN: "%=" >
| < LSHIFTASSIGN: "<<=" >
| < RSIGNEDSHIFTASSIGN: ">>=" >
| < RUNSIGNEDSHIFTASSIGN: ">>>=" >
| < ELLIPSIS: "..." >
| < ARROW: "->" >
| < DOUBLECOLON: "::" >
}

/* NUMERATORS */

TOKEN :
{
    < DIGIT: ["0"-"9"]>{System.out.println("Dígito coincide com -> "+image);}
    | < INTEGER: (<DIGIT>)+ >{System.out.println("Inteiro coincide com -> "+image);}
    | < REAL: (<INTEGER>["."]<INTEGER>)+ >{System.out.println("Real coincide com -> "+image);}
}


/* RESERVED WORDS */

TOKEN :
{
  < ABSTRACT: "abstract" >
| < ASSERT: "assert" >
| < BOOLEAN: "boolean" >
| < BREAK: "break" >
| < BYTE: "byte" >
| < CASE: "case" >
| < CATCH: "catch" >
| < CHAR: "char" >
| < CLASS: "class" >
| < CONST: "const" >
| < CONTINUE: "continue" >
| < _DEFAULT: "default" >
| < DO: "do" >
| < DOUBLE: "double" >
| < ELSE: "else" >
| < ENUM: "enum" >
| < EXTENDS: "extends" >
| < FALSE: "false" >
| < FINAL: "final" >
| < FINALLY: "finally" >
| < FLOAT: "float" >
| < FOR: "for" >
| < GOTO: "goto" >
| < IF: "if" >
| < IMPLEMENTS: "implements" >
| < IMPORT: "import" >
| < INSTANCEOF: "instanceof" >
| < INT: "int" >{System.out.println("Palavra reservada int coincide com -> "+image);}
| < INTERFACE: "interface" >
| < LONG: "long" >
| < NATIVE: "native" >
| < NEW: "new" >
| < NULL: "null" >
| < PACKAGE: "package">
| < PRIVATE: "private" >
| < PROTECTED: "protected" >
| < PUBLIC: "public" >{System.out.println("Palavra reservada public coincide com -> "+image);}
| < RETURN: "return" >
| < SHORT: "short" >
| < STATIC: "static" >
| < STRICTFP: "strictfp" >
| < SUPER: "super" >
| < SWITCH: "switch" >
| < SYNCHRONIZED: "synchronized" >
| < THIS: "this" >
| < THROW: "throw" >
| < THROWS: "throws" >
| < TRANSIENT: "transient" >
| < TRUE: "true" >
| < TRY: "try" >
| < VOID: "void" >{System.out.println("Palavra reservada void coincide com -> "+image);}
| < VOLATILE: "volatile" >
| < WHILE: "while" >
| < REQUIRES: "requires" >
| < TO: "to" >
| < WITH: "with" >
| < OPEN: "open" >
| < OPENS: "opens" >
| < USES: "uses" >
| < MODULE: "module" >
| < EXPORTS: "exports" >
| < PROVIDES: "provides" >
| < TRANSITIVE: "transitive" >
}

/* TEXT */

TOKEN : {
    < CHARACTER: (["a"-"z"]|["A"-"Z"])>{System.out.println("Caractere coincide com -> "+image);}
    | < IDENTIFIER: (["a"-"z"]|["A"-"Z"]|["0"-"9"])+>{System.out.println("Identificador coincide com -> "+image);}
    | < LITERAL: (["."])+>{System.out.println("Literal -> "+image);}
}

SKIP : {
    " "|"\r\n"|"\t"|"\n"|"\r"
}

void Program():{}
{
    signatures()
    method()
}

void signatures():{}
{
  <AT><JCODINGTIME>
  <AT><INPUT><LPAREN><FPARAM><ASSIGN><DIGIT><COMMA><SPARAM><ASSIGN><DIGIT><RPAREN>
  <AT><OUTPUT><LPAREN><RPARAM><INTEGER><RPAREN>
}

void method():{}
{
   ((<PUBLIC>|<PRIVATE>|<PROTECTED>) (<STATIC> (<INT> | <FLOAT> | <CHAR> | <BOOLEAN> | <DOUBLE> | <VOID>) | (<INT> | <FLOAT> | <CHAR> | <BOOLEAN> | <DOUBLE> | <VOID>)) | (<STATIC> <VOID> | <VOID>))  <IDENTIFIER> <LPAREN> (<INT> | <FLOAT> | <CHAR> | <BOOLEAN> | <DOUBLE>) <IDENTIFIER> <COMMA> (<INT> | <FLOAT> | <CHAR> | <BOOLEAN> | <DOUBLE>) <IDENTIFIER> <RPAREN>
}
